# miniqa

./: .gitignore  Containerfile  README.md  miniqa.py  pyproject.toml
.github/workflows/: container-publish.yml
docs/: README.md  Steps.md  Test Case Files.md  YAML Preprocessing.md  miniqa.yml.md
miniqa/: __init__.py  __main__.py
miniqa/lib/: assets_server.py  config.py  errors.py  snapshot_cache.py  utils.py
miniqa/lib/actions/: __init__.py  wait_action.py
miniqa/lib/image_analysis/: compare.py  find_element.py  utils.py
miniqa/lib/qemu/: __init__.py  qemu_coordinates.py  qemu_keymap.py  qemu_utils.py  qmp.py
miniqa/lib/runner/: test_models.py  test_runner.py
miniqa/lib/test_case/: load_yaml.py  model_helpers.py  test_case_file.py  test_case_utils.py
miniqa/lib/webui/: app.py  config.py  helpers.py  setup.py  state.py  websocket.py
miniqa/lib/webui/static/: style.css
miniqa/lib/webui/static/js/: App.js  api.js  editor.js  schema.js  state.js  utils.js  vnc.js
miniqa/lib/webui/static/js/components/: EditView.js  Icon.js  Lightbox.js  PipelineView.js  RefsPanel.js  RegionOverlay.js  StepList.js  StepStatusBar.js  TestItem.js  VncPanel.js  (+1 more)
miniqa/lib/webui/templates/: index.html
sample_tests/: miniqa.yml  run_miniqa.sh  run_tests.sh
sample_tests/refs/: desktop.ppm  meta_l_keypress.ppm  terminal_opened.ppm  volume_down_keypress.ppm
sample_tests/refs/test_miniqa_webui/: test_expanded.ppm
sample_tests/tests/: 000_base.yml  001_volume_down_keypress.yml  002_meta_l_keypress.yml  base.yml  test_miniqa_webui.yml
tools/: build_and_run_miniqa.sh
(+3 files in other folders)
